1-Lessons/ch3/kuber-homeworks/2.3/dep1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kub23-1
  labels:
    app: kub23-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app23-1
  template:
    metadata:
      labels:
        app: app23-1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
            name: http-port
          - containerPort: 443
            name: https-port
        volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: volume1
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
      volumes:
      - name: volume1
        configMap:
          name: cfg2-3
          items:
          - key: "index.html"
            path: "index.html"
---
apiVersion: v1
kind: Service
metadata:
  name: srv23-1
spec:
  selector:
    app: app23-1
  type: NodePort
  ports:
    - name: porttonginx
      protocol: TCP
      port: 80
      nodePort: 30001
      targetPort: 80
    - name: porttomultitool
      protocol: TCP
      port: 8080
      nodePort: 30002
      targetPort: 8080
