1-Lessons/ch3/kuber-homeworks/2.3/dep2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kub23-2
  labels:
    app: kub23-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app23-2
  template:
    metadata:
      labels:
        app: app23-2
    spec:
      volumes:
      - name: volume1
        configMap:
          name: cfg2-3
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: secret-volume
        secret:
          secretName: secret23
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
            name: http-port
          - containerPort: 443
            name: https-port
        volumeMounts:
          - name: volume1
            mountPath: /usr/share/nginx/html/
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
          - name: secret-volume
            mountPath: /etc/nginx/ssl
---
apiVersion: v1
kind: Service
metadata:
  name: srv23-2
spec:
  selector:
    app: app23-2
  type: NodePort
  ports:
    - name: nginx80
      protocol: TCP
      port: 80
      nodePort: 30003
      targetPort: 80
    - name: nginx443
      protocol: TCP
      port: 443
      nodePort: 30004
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing23-2
spec:
  rules:
  - host: kub23.edu.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srv23-2
            port:
              number: 80
  tls:
    - hosts:
      - kub23.edu.ru
      secretName: secret23
